--- a/mosip-core-api/src/main/resources/application.properties
+++ b/mosip-core-api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mosip_core_api
 spring.datasource.username=user2
-spring.datasource.password=Naman@11396
+spring.datasource.password=
 
 server.port=51312
