--- a/mosip-core-api/mosip-core-api/src/main/resources/application.properties
+++ b/mosip-core-api/mosip-core-api/src/main/resources/application.properties
@@ -8,5 +8,5 @@ server.port=51310
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=rishabhs201195@gmail.com
-spring.mail.password=ydct#hmnsnh209
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
