--- a/mosip-core-api2/src/main/resources/application.properties
+++ b/mosip-core-api2/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/mosip_core_api
 spring.datasource.username=user2
-spring.datasource.password=Naman@11396
+spring.datasource.password=
 server.port=51310
 
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=naman11396@gmail.com
-spring.mail.password=anpugu@uugpan
+spring.mail.password=
 spring.mail.properties.mail.smtp.starttls.enable=true
